# FATx_FUSE

./: .gitignore  README.md
fatformat/: VirtualDisk.img  fatformat  main.c
fatfuse/: CMakeLists.txt  README.md  fatx_main.c
fatfuse/include/: fatx_constants.h  file_access.h  file_allocation_table.h  image_access.h  read_bootsec.h
fatfuse/src/: CMakeLists.txt  file_access.c  file_allocation_table.c  image_access.c  read_bootsec.c
